--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       <th><span>HOME</span></th>
       <th><span>HOBBY</span></th>
       <th><span>OTHER</span></th>
-    <tr>	
+    <tr>
+  </table>	
   </div>
+  
   <div id="div1">
   <table id="table1">
     <tr>
